--- a/angular-app/premiere-app/my-base-app/src/app/pages/general/home/home.component.html
+++ b/angular-app/premiere-app/my-base-app/src/app/pages/general/home/home.component.html
@@ -1,3 +1,5 @@
 <p>home works!</p>
 
-<p>{{'une montagne' | ucfirst}}</p>
+<p>{{'une montagne' | ucfirst }}</p>
+
+<p class="border border-primary">home works</p>
